update pagination text to avoid break on small screens

--- a/assets/olde-style.css
+++ b/assets/olde-style.css
@@ -5,7 +5,19 @@
 }
 
 body {
-	background-color: #eee;
+	background: #ffffcc url(../assets/images/parchment-paper.jpg) fixed center/cover;
+  font-family: 'IM Fell DW Pica SC', serif;
+  color: rgba(25, 25, 25, 0.8);
+}
+
+p {
+  font-family: "IM Fell DW Pica", serif;
+}
+
+#bodyPanel {
+  background: rgba(360, 360, 360, 0.2);
+  border-radius: 10px;
+  background-size: 100% 100%;
 }
 
 .vertical-center {
@@ -25,17 +37,34 @@ body {
 	margin-bottom: 20px;
 }
 
-#hangPic {
+#hangPic-container {
 	margin: 20px;
 }
 
-#hangSVG {
-	max-height: 25vh;
+#hangPic {
+  max-height: 100%;
+  max-width: 100%;
+  opacity: 0.8;
+}
+
+.pagination {
+	margin: 5px;
+}
+
+.pagination>li>a {
+  color: #cdb873;
+}
+
+.pagination>.active>a {
+  background-color: #cdb873;
+  border-color: #cdb873;
 }
 
 .btn {
-    white-space: normal !important;
-    word-wrap: break-word;
+  background: #ffffcc;
+  border-color: rgba(0, 0, 0, 0.1);
+  white-space: normal !important;
+  word-wrap: break-word;
 }
 
 .alphaBtn {
@@ -43,6 +72,14 @@ body {
 	min-height: 40px;
 	margin: 5px;
 }
+
+#instructionModal div {
+  background: #ffffcc;
+  border-color: rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  background-clip: padding-box;
+}
+
 
 @media screen and (max-width: 768px) {
 	.rightWrong {
